# RedactIQ

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Desktop/redactiq/: README.md  pyproject.toml
Desktop/redactiq/configs/: default.yaml
Desktop/redactiq/redactiq/: __init__.py
Desktop/redactiq/redactiq.egg-info/: SOURCES.txt  top_level.txt
Desktop/redactiq/redactiq/anomaly/: detector.py
Desktop/redactiq/redactiq/detection/: __init__.py  hybrid.py  llm_detector.py  rule_engine.py
Desktop/redactiq/redactiq/redaction/: engine.py  pipeline.py
Desktop/redactiq/redactiq/serving/: api.py
Desktop/redactiq/redactiq/ui/: app.py
Desktop/redactiq/redactiq/utils/: models.py
Desktop/redactiq/scripts/: evaluate.py  fine_tune.py
Desktop/redactiq/tests/: test_pipeline.py  test_redaction.py  test_rule_engine.py
configs/: default.yaml  prometheus.yml
redactiq.egg-info/: PKG-INFO  entry_points.txt  requires.txt
redactiq/anomaly/: detector.py
redactiq/data/: generate.py
redactiq/detection/: hybrid.py  llm_detector.py  rule_engine.py
redactiq/redaction/: engine.py  pipeline.py
redactiq/serving/: api.py
redactiq/ui/: app.py
redactiq/utils/: config.py  file_parser.py  file_writer.py  models.py
scripts/: setup.sh  train_anomaly.py
tests/: test_redaction.py  test_rule_engine.py
